Bug 1305490 - Use ALLOC_UPDATE_FROM_SURFACE flag r=mattwoodrow